--- a/Test_WebApi/Test_WebApi.csproj
+++ b/Test_WebApi/Test_WebApi.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UploadedFiles\" />
+  </ItemGroup>
+
 </Project>
